# fcitx5-skk

./: .gitignore  CMakeLists.txt  Messages.sh  README.md  config.h.in  org.fcitx.Fcitx5.Addon.Skk.metainfo.xml.in  org.fcitx.fcitx5-skk.metainfo.xml.in
.github/workflows/: check.yml
cmake/: FindLibSKK.cmake  FindLibSkk.cmake
data/: CMakeLists.txt
gui/: CMakeLists.txt  adddictdialog.cpp  adddictdialog.h  adddictdialog.ui  common.h  dictmodel.cpp  dictmodel.h  dictwidget.cpp  dictwidget.h  dictwidget.ui  main.cpp  main.h  rulemodel.cpp  rulemodel.h  skk-config.json
po/: CMakeLists.txt  ca.po  da.po  de.po  fcitx-skk.pot  fcitx5-skk.pot  fr.po  he.po  ja.po  ka.po  ko.po  ru.po  tr.po  vi.po  zh_CN.po  zh_TW.po
src/: CMakeLists.txt  dictionary_list.in  fcitx-skk.conf.in  fcitx-skk.desc  skk-addon.conf.in  skk-addon.conf.in.in  skk-config.c  skk.c  skk.conf.in  skk.cpp  skk.h  skk.hpp  utils.cpp  utils.h
